# ChangeLog for app-emulation/sst-libvirt-hooks
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*sst-libvirt-hooks-1.0.2 (14 Jan 2014)

  14 Jan 2014; Christian Affolter <christian.affolter@stepping-stone.ch>
  +sst-libvirt-hooks-1.0.2.ebuild:
  Version bump to 1.0.2

*sst-libvirt-hooks-1.0.1 (21 Nov 2013)

  21 Nov 2013; Christian Affolter <christian.affolter@stepping-stone.ch>
  +sst-libvirt-hooks-1.0.1.ebuild:
  Version bump to 1.0.1

*sst-libvirt-hooks-1.0.0 (21 Nov 2013)

  21 Nov 2013; Christian Affolter <christian.affolter@stepping-stone.ch>
  +sst-libvirt-hooks-1.0.0.ebuild:
  Version bump to 1.0.0 and installation of the example configuration.

*sst-libvirt-hooks-0.1.1 (08 Aug 2013)

  08 Aug 2013; Christian Affolter <c.affolter@stepping-stone.ch>
  +sst-libvirt-hooks-0.1.1.ebuild:
  Version bump to 0.1.1.

*sst-libvirt-hooks-0.1.0 (07 Aug 2013)

  07 Aug 2013; Christian Affolter <c.affolter@stepping-stone.ch>
  +sst-libvirt-hooks-0.1.0.ebuild:
  Initial commit.
