@@ -6,5 +6,5 @@ EBUILD sst-libvirt-hooks-0.1.2.ebuild 800 SHA256 49092be625c71dc0bd7c9290d854c64
 EBUILD sst-libvirt-hooks-1.0.0.ebuild 1029 SHA256 8aac7ee2ac34a86ba893fba350f85a9cd0a8910b23cb16024f2a9cf57ebb0561 SHA512 acf5b9ee21459ae2b5a396039e5bacbdf865d54f06fa94ec756e9bcc4457895f69fc93ecba05c77905a738b0e59e3f347657a577c1f45d455f085a846b149a6c WHIRLPOOL 7856703be4e1ba73bc77b8944cfecd6bed101f912cf247471acdcacf0280ffd3190c27767e77b0b93fb783d3501f23d0fc60e3595b4ceca33da3685f7330ec71
 EBUILD sst-libvirt-hooks-1.0.1.ebuild 1029 SHA256 8aac7ee2ac34a86ba893fba350f85a9cd0a8910b23cb16024f2a9cf57ebb0561 SHA512 acf5b9ee21459ae2b5a396039e5bacbdf865d54f06fa94ec756e9bcc4457895f69fc93ecba05c77905a738b0e59e3f347657a577c1f45d455f085a846b149a6c WHIRLPOOL 7856703be4e1ba73bc77b8944cfecd6bed101f912cf247471acdcacf0280ffd3190c27767e77b0b93fb783d3501f23d0fc60e3595b4ceca33da3685f7330ec71
 EBUILD sst-libvirt-hooks-1.0.2.ebuild 1023 SHA256 a32e681a67a36a929329215ff7e905fe4145ba3c88c960bc7664b6154edb0369 SHA512 385d60b72be142590ba6e154b462763d68cd2ed74a7431088b6eaabc6abf00109065c03f85278ac5eb2bd200ba16a363c6b23970c91370868edcd0887e1ba43d WHIRLPOOL e7fae4f5f864ea3406adc1b034cdaad503cf17156d9eefc1e26a14e880d077797be57880d4dbaa7b71f8271511408127a7fe9eda32679044bbc0a65dca2c4ebd
-EBUILD sst-libvirt-hooks-9999.ebuild 765 SHA256 40a8d5575aae2c4cde0d97ff178e124d6f4cd13c9e3dbfbdc16d67d4af709d12 SHA512 ffecccc3fd839caf880546d11b1854248745f23e54ac208f987a849f863a5f822ecff145fee3d77f97fc92a86eff700d4d85a9f0d776304585d5c61c8f182a41 WHIRLPOOL 551f3284870c0d0e7c3d8cccd3c8602fee47025615d5b8121e9d64c64122d66adbcbea69e4fc886df78e4ba17a3eb5e6a72bb859486a5ed9db05002c67ce1b2a
-MISC ChangeLog 1023 SHA256 4a7f8c604305afe894a4147ffa0c4de6d75ec47855de1b7b8921f6bca588f32e SHA512 2e026e62451f61a21db7482e751b47223e472c309b37f319d9159c4a68ea6c105e3cad37c193f9ace9671f4d64795560b7c4ae6c4e14459b696d17d28758e3fc WHIRLPOOL 2a77aa0d2cc0f6039704e99e6d898ff09c6397e447d9f926d73c6adad9501baffca9e8bb929bb68c7f90f8c926cae344b903160fdc84db9840c11c4c34ca3137
+EBUILD sst-libvirt-hooks-9999.ebuild 992 SHA256 577bd10c5c31378b89efa653174fe6d49d18a53d70945a8818f582c53925ee7b SHA512 51638fe02641a94e2f9b43168dc86434ddfb736ea515a65fb55e1b582b7168ec719ea64fc8cdd2b5d158751082ddf38af6e36da21cbc4d617b373d6db9eb7dbd WHIRLPOOL a86e565ec26f9f4da1ef5e827ead8949b83e8150b2e0fa018e44d8f89868132f3999db61314ed3d4e63b942b6c70246908bfb0d4cd8fc324cccb9a10493b36df
+MISC ChangeLog 1177 SHA256 2d9c73e666e1d3bef7da300485f0f3ab12ee3f40b99b52cbca4dfa68ee4230d0 SHA512 3aff3049cf93f7bac56d617f1609b0e86d00ad566478ad48932b5bb4b2ac042cc249401d2feb5ea02836dbb8bd8d95fac0e86bede30bcb358853e381d128064c WHIRLPOOL 9c7e19c9649eec2fc18d4f99212643892495f10259a7c4b4be955c38683ea8be081fb7e968bef015461ab85e7af41c8cf2c9756e90e8453bf3d00d6a4e76a897
