@@ -2,6 +2,10 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  10 Feb 2014; Christian Affolter <christian.affolter@stepping-stone.ch>
+  sst-libvirt-hooks-9999.ebuild:
+  Updated live ebuild to be in sync with 1.0.2
+
 *sst-libvirt-hooks-1.0.2 (14 Jan 2014)
 
   14 Jan 2014; Christian Affolter <christian.affolter@stepping-stone.ch>
